--- a/SherpaDesk/AddTicket.xaml
+++ b/SherpaDesk/AddTicket.xaml
@@ -2,122 +2,104 @@
     x:Name="pageRoot"
     x:Class="SherpaDesk.AddTicket"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Mode=Self}}"
-    mc:Ignorable="d" Loaded="pageRoot_Loaded">
+    mc:Ignorable="d" Loaded="pageRoot_Loaded" RequestedTheme="Light">
 
     <common:LayoutAwarePage.Resources>
-
-        <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
         <x:String x:Key="AppName">My Application</x:String>
+        <Style x:Key="SubmitButtonStyle" TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <Image Source="Assets/green-button.png" Stretch="Fill" />
+                            <TextBlock Text="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center"
+                                 FontFamily="Segoe UI" FontSize="30"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </common:LayoutAwarePage.Resources>
-
-    <!--
-        This grid acts as a root panel for the page that defines two rows:
-        * Row 0 contains the back button and page title
-        * Row 1 contains the rest of the page layout
-    -->
-    <Grid Style="{StaticResource LayoutRootStyle}" Background="Transparent">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="240"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <VisualStateManager.VisualStateGroups>
-
-            <!-- Visual states reflect the application's view state -->
-            <VisualStateGroup x:Name="ApplicationViewStates">
-                <VisualState x:Name="FullScreenLandscape"/>
-                <VisualState x:Name="Filled"/>
-
-                <!-- The entire page respects the narrower 100-pixel margin convention for portrait -->
-                <VisualState x:Name="FullScreenPortrait">
-                    <Storyboard>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PortraitBackButtonStyle}"/>
-                        </ObjectAnimationUsingKeyFrames>
-                    </Storyboard>
-                </VisualState>
-
-                <!-- The back button and title have different styles when snapped -->
-                <VisualState x:Name="Snapped">
-                    <Storyboard>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="backButton" Storyboard.TargetProperty="Style">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedBackButtonStyle}"/>
-                        </ObjectAnimationUsingKeyFrames>
-                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="pageTitle" Storyboard.TargetProperty="Style">
-                            <DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource SnappedPageHeaderTextStyle}"/>
-                        </ObjectAnimationUsingKeyFrames>
-                    </Storyboard>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
-
-        <!-- Back button and page title -->
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1140"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock x:Name="pageTitle" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,30" Style="{StaticResource PageHeaderTextStyle}" Text="Create Ticket" FontWeight="Normal"/>
-            <HyperlinkButton x:Name="AddUserLink" Content="Add User" Grid.Row="0" Grid.Column="1" Padding="0,0,0,0" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" FontSize="24" Foreground="White" Height="51" FontWeight="Normal" Width="140" Click="AddUserLink_Click" />
-        </Grid>
-        <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="Transparent">
+    <Grid Background="White">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+        </Grid.ColumnDefinitions>
+        <Grid Margin="50,0,50,0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="60"/>
-                <RowDefinition Height="60"/>
-                <RowDefinition Height="60"/>
-                <RowDefinition Height="60"/>
-                <RowDefinition Height="60"/>
-                <RowDefinition Height="60"/>
-                <RowDefinition Height="60"/>
-                <RowDefinition Height="60"/>
-                <RowDefinition Height="60"/>
                 <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="100"/>
-            </Grid.ColumnDefinitions>
 
-            <Controls:WatermarkTextBox x:Name="SubjectTextbox" HorizontalAlignment="Center" WatermarkText="Subject" Height="50" Grid.Row="0" Grid.Column="0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top"  FontSize="24" Width="450" />
-            <Controls:WatermarkTextBox x:Name="DescritionTextbox" AcceptsReturn="True" HorizontalAlignment="Center" Margin="0,0,0,15" WatermarkText="Details..." Grid.Row="1" Grid.RowSpan="6" TextWrapping="Wrap" Grid.Column="0" Text="" VerticalAlignment="Stretch" FontSize="24" Width="450" />
-            <Button x:Name="SaveButton" Content="Create Ticket" HorizontalAlignment="Stretch" Grid.Column="0" FontSize="30" Margin="-3,0,-3,0" Padding="0,0,0,3" VerticalAlignment="Stretch" Grid.Row="7" Background="#FF2F9129" Tapped="SaveButton_Tapped" />
+            <!-- Back button and page title -->
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock x:Name="pageTitle" Grid.Column="0" Foreground="#86abb6" Margin="0,30,80,20" FontSize="60" Text="Create Ticket" FontWeight="Normal"/>
+                <HyperlinkButton x:Name="AddUserLink" VerticalAlignment="Top" Foreground="#86abb6" Margin="0,5,45,20" FontSize="35" Content="Add New User" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" FontWeight="Normal" Click="AddUserLink_Click" />
+                <Image x:Name="AddUserArrow" Source="Assets/arrow-right.png" Stretch="None" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,0,0" />
+            </Grid>
+            <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="Transparent">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="100"/>
+                </Grid.ColumnDefinitions>
 
-            <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="0" TextWrapping="Wrap" Text="End User" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-            <ComboBox x:Name="EndUserList" Grid.Column="3" Grid.Row="0" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top" SelectionChanged="EndUserList_SelectionChanged">
-            </ComboBox>
-            <HyperlinkButton x:Name="EndUserMeLink" Content="Me" Grid.Row="0" Grid.Column="4" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="24" Foreground="White" Height="51" FontWeight="Normal" Click="EndUserMeLink_Click"/>
+                <Controls:WatermarkTextBox x:Name="SubjectTextbox" HorizontalAlignment="Center" WatermarkText="Subject" Height="50" Grid.Row="0" Grid.Column="0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top"  FontSize="24" Width="450" />
+                <Controls:WatermarkTextBox x:Name="DescritionTextbox" AcceptsReturn="True" HorizontalAlignment="Center" Margin="0,0,0,15" WatermarkText="Details..." Grid.Row="1" Grid.RowSpan="6" TextWrapping="Wrap" Grid.Column="0" Text="" VerticalAlignment="Stretch" FontSize="24" Width="450" />
 
-            <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="1" TextWrapping="Wrap" Text="Account" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-            <ComboBox x:Name="AccountList" Grid.Column="3" Grid.Row="1" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
-            </ComboBox>
+                <Button x:Name="SaveButton" Width="395" Height="62" Style="{StaticResource SubmitButtonStyle}" Content="Create Ticket" HorizontalAlignment="Stretch" Grid.Column="0" VerticalAlignment="Stretch" Grid.Row="7" Foreground="White" Tapped="SaveButton_Tapped" PointerEntered="SaveButton_PointerEntered" PointerExited="SaveButton_PointerExited" FontWeight="Normal" />
 
-            <TextBlock Grid.Column="2" HorizontalAlignment="right" Grid.Row="2" TextWrapping="Wrap" Text="Class" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-            <ComboBox Name="ClassList" Grid.Column="3" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
-            </ComboBox>
+                <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="2" Grid.Row="0" TextWrapping="Wrap" Text="End User" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
+                <ComboBox x:Name="EndUserList" Grid.Column="3" Grid.Row="0" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top" SelectionChanged="EndUserList_SelectionChanged">
+                </ComboBox>
+                <HyperlinkButton x:Name="EndUserMeLink" Foreground="#625e55" Content="Me" Grid.Row="0" Grid.Column="4" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="24" Height="51" FontWeight="Normal" Click="EndUserMeLink_Click"/>
 
-            <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="3" TextWrapping="Wrap" Text="Technician" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-            <ComboBox x:Name="TechnicianList" Grid.Column="3" Grid.Row="3" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
-            </ComboBox>
-            <HyperlinkButton x:Name="TechnicianMeLink" Content="Me" Grid.Row="3" Grid.Column="4" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="24" Foreground="White" Height="51" FontWeight="Normal" Click="TechnicianMeLink_Click"/>
+                <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="2" Grid.Row="1" TextWrapping="Wrap" Text="Account" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
+                <ComboBox x:Name="AccountList" Grid.Column="3" Grid.Row="1" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+                </ComboBox>
 
-            <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="4" TextWrapping="Wrap" Text="Alternate Tech" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-            <ComboBox x:Name="AlternateTechnicianList" Grid.Column="3" Grid.Row="4" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top" SelectionChanged="AlternateTechnicianList_SelectionChanged">
-            </ComboBox>
-            <HyperlinkButton x:Name="AlternateTechMeLink" Content="Me" Grid.Row="4" Grid.Column="4" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="24" Foreground="White" Height="51" FontWeight="Normal" Click="AlternateTechMeLink_Click"/>
+                <TextBlock Grid.Column="2" Foreground="#625e55" HorizontalAlignment="right" Grid.Row="2" TextWrapping="Wrap" Text="Class*" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
+                <ComboBox Name="ClassList" Grid.Column="3" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+                </ComboBox>
 
-            <ScrollViewer HorizontalAlignment="Left" Grid.Column="3" Grid.ColumnSpan="3" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="5" Grid.RowSpan="2" Height="100" VerticalAlignment="Top" Width="auto">
-                <ListView x:Name="SelectedAlternateTechnicianList" Grid.Column="3" Margin="0,0,0,0" Grid.Row="5" Grid.RowSpan="3" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="450" SelectionMode="None">
-                </ListView>
-            </ScrollViewer>
+                <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="2" Grid.Row="3" TextWrapping="Wrap" Text="Technician" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
+                <ComboBox x:Name="TechnicianList" Grid.Column="3" Grid.Row="3" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+                </ComboBox>
+                <HyperlinkButton x:Name="TechnicianMeLink" Foreground="#625e55" Content="Me" Grid.Row="3" Grid.Column="4" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="24" Height="51" FontWeight="Normal" Click="TechnicianMeLink_Click"/>
 
-            <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="7" TextWrapping="Wrap" Text="Files" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-            <Button x:Name="filepickButton" Content="Attach Files" Grid.Column="3" Height="auto" HorizontalAlignment="Stretch" Padding="0,5,0,8" Margin="-3,0,-3,0" Grid.Row="7" VerticalAlignment="Top" FontSize="24" Click="filepickButton_Click" />
-            <ScrollViewer HorizontalAlignment="Left" Grid.Column="3" Grid.ColumnSpan="3" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="8" Height="auto" VerticalAlignment="Top" Width="auto">
-                <TextBlock x:Name="SelectedFilesList" Width="450" HorizontalAlignment="Left" Height="auto" Margin="0,0,0,0" Grid.Row="8" TextWrapping="WrapWholeWords" FontSize="20" VerticalAlignment="Top"/>
-            </ScrollViewer>
+                <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="2" Grid.Row="4" TextWrapping="Wrap" Text="Alternate Tech" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
+                <ComboBox x:Name="AlternateTechnicianList" Grid.Column="3" Grid.Row="4" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top" SelectionChanged="AlternateTechnicianList_SelectionChanged">
+                </ComboBox>
+                <HyperlinkButton x:Name="AlternateTechMeLink" Foreground="#625e55" Content="Me" Grid.Row="4" Grid.Column="4" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="24" Height="51" FontWeight="Normal" Click="AlternateTechMeLink_Click"/>
+
+                <ScrollViewer HorizontalAlignment="Left" Grid.Column="3" Grid.ColumnSpan="3" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="5" Grid.RowSpan="2" Height="100" VerticalAlignment="Top" Width="auto">
+                    <ListView x:Name="SelectedAlternateTechnicianList" Grid.Column="3" Margin="0,0,0,0" Grid.Row="5" Grid.RowSpan="3" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="450" SelectionMode="None">
+                    </ListView>
+                </ScrollViewer>
+
+                <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="2" Grid.Row="7" TextWrapping="Wrap" Text="Files" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
+                <Button x:Name="filepickButton" Foreground="#625e55" Content="Attach Files" Grid.Column="3" Height="auto" HorizontalAlignment="Stretch" Padding="0,5,0,8" Margin="-3,0,-3,0" Grid.Row="7" VerticalAlignment="Top" FontSize="24" Click="filepickButton_Click" />
+                <ScrollViewer HorizontalAlignment="Left" Grid.Column="3" Grid.ColumnSpan="3" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="8" Height="auto" VerticalAlignment="Top" Width="auto">
+                    <TextBlock x:Name="SelectedFilesList" Width="450" HorizontalAlignment="Left" Height="auto" Margin="0,0,0,0" Grid.Row="8" TextWrapping="WrapWholeWords" FontSize="20" VerticalAlignment="Top"/>
+                </ScrollViewer>
+            </Grid>
         </Grid>
     </Grid>
-
 </common:LayoutAwarePage>
