--- a/SherpaDesk/Info.xaml
+++ b/SherpaDesk/Info.xaml
@@ -130,7 +130,7 @@
                     </StackPanel>
                 </telerik:RadCustomHubTile.FrontContent>
             </telerik:RadCustomHubTile>
-            <telerik:RadCustomHubTile x:Name="TicketButton" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Height="150" Margin="0,25,5,5" Width="150" Background="#D8E9EDEF">
+            <telerik:RadCustomHubTile x:Name="TicketButton" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Height="150" Margin="0,25,5,5" Width="150" Background="#D8E9EDEF" Tapped="TicketButton_Tapped">
                 <telerik:RadCustomHubTile.FrontContent>
                     <StackPanel Margin="0,0,0,0" VerticalAlignment="Bottom" HorizontalAlignment="Right">
                         <TextBlock Text="+Ticket" FontSize="28" Margin="0,0,10,0" Foreground="#FF7395A4" FontWeight="Bold"/>
