--- a/SherpaDesk/AddTicket.xaml
+++ b/SherpaDesk/AddTicket.xaml
@@ -4,7 +4,7 @@
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Mode=Self}}"
     mc:Ignorable="d" Loaded="pageRoot_Loaded" RequestedTheme="Light">
 
-    <common:LayoutAwarePage.Resources>
+    <common:LayoutAwarePage.Resources>   
         <x:String x:Key="AppName">My Application</x:String>
         <Style x:Key="SubmitButtonStyle" TargetType="Button">
             <Setter Property="Template">
@@ -12,89 +12,104 @@
                     <ControlTemplate TargetType="Button">
                         <Grid>
                             <Image Source="Assets/green-button.png" Stretch="Fill" />
-                            <TextBlock Text="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center"
-                                 FontFamily="Segoe UI" FontSize="30"/>
+                            <TextBlock Text="{TemplateBinding Content}" Padding="0,0,0,2" HorizontalAlignment="Center" VerticalAlignment="Center"
+                                 FontFamily="Segoe UI" FontSize="21"/>
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
     </common:LayoutAwarePage.Resources>
-    <Grid Background="White">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
-        <Grid Margin="50,0,50,0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-
-            <!-- Back button and page title -->
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock x:Name="pageTitle" Grid.Column="0" Foreground="#86abb6" Margin="0,30,80,20" FontSize="60" Text="Create Ticket" FontWeight="Normal"/>
-                <HyperlinkButton x:Name="AddUserLink" VerticalAlignment="Top" Foreground="#86abb6" Margin="0,5,45,20" FontSize="35" Content="Add New User" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" FontWeight="Normal" Click="AddUserLink_Click" />
-                <Image x:Name="AddUserArrow" Source="Assets/arrow-right.png" Stretch="None" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,0,0" />
-            </Grid>
-            <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="Transparent">
+        <Grid Background="White">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+            </Grid.ColumnDefinitions>
+            <Grid Margin="50,0,50,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="auto"/>
-                </Grid.ColumnDefinitions>
 
-                <Controls:WatermarkTextBox x:Name="SubjectTextbox" HorizontalAlignment="Center" WatermarkText="Subject" Height="40" Grid.Row="0" Grid.Column="3" TextWrapping="NoWrap" Text="" VerticalAlignment="Top"  FontSize="24" Width="450" BorderBrush="#FFCDCDCD" BorderThickness="2" Padding="0,0,0,3" PlaceholderText="qwdqwd" />
-                <Controls:WatermarkTextBox x:Name="DescritionTextbox" AcceptsReturn="True" HorizontalAlignment="Center" Margin="0,15,0,0" Grid.Column="3" WatermarkText="Details..." Grid.Row="1" Grid.RowSpan="4" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" FontSize="24" Width="450" BorderBrush="#FFCDCDCD" BorderThickness="2" />
+                <!-- Back button and page title -->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock x:Name="pageTitle" Grid.Column="0" Foreground="#86abb6" Margin="0,30,80,20" FontSize="60" Text="Create Ticket" FontWeight="Normal"/>
+                    <HyperlinkButton x:Name="AddUserLink" VerticalAlignment="Top" Foreground="#86abb6" Margin="0,5,45,20" FontSize="35" Content="Add New User" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Right" FontWeight="Normal" Tapped="AddUserLink_Tapped" />
+                    <Image x:Name="AddUserArrow" Source="Assets/arrow-right.png" Stretch="None" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,15,0,0" Tapped="AddUserLink_Tapped" PointerEntered="AddUserArrow_PointerEntered" PointerExited="AddUserArrow_PointerExited" />
+                </Grid>
+                <Grid Style="{StaticResource LayoutRootStyle}" Grid.Row="1" Background="Transparent">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
 
-                <Button x:Name="SaveButton" Width="395" Height="62" Style="{StaticResource SubmitButtonStyle}" Content="Create Ticket" HorizontalAlignment="Stretch" Grid.Column="3" VerticalAlignment="Stretch" Grid.Row="8" Foreground="White" Tapped="SaveButton_Tapped" PointerEntered="SaveButton_PointerEntered" PointerExited="SaveButton_PointerExited" FontWeight="Normal" />
+                    <Controls:WatermarkTextBox x:Name="SubjectTextbox" HorizontalAlignment="Center" WatermarkText="Subject" Height="40" Grid.Row="0" Grid.Column="3" TextWrapping="NoWrap" Text="" VerticalAlignment="Top"  FontSize="24" Width="450" BorderBrush="#FFCDCDCD" BorderThickness="2" Padding="0,0,0,3" PlaceholderText="qwdqwd" />
+                    <Controls:WatermarkTextBox x:Name="DescritionTextbox" AcceptsReturn="True" HorizontalAlignment="Center" Margin="0,15,0,0" Grid.Column="3" WatermarkText="Details..." Grid.Row="1" Grid.RowSpan="4" TextWrapping="Wrap" Text="" VerticalAlignment="Stretch" FontSize="24" Width="450" BorderBrush="#FFCDCDCD" BorderThickness="2" />
 
-                <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="0" TextWrapping="Wrap" Text="End User" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
-                <ComboBox x:Name="EndUserList" Grid.Column="1" Grid.Row="0" FontSize="24" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,0,0,0" VerticalAlignment="Top" SelectionChanged="EndUserList_SelectionChanged" BorderBrush="#FFCDCDCD">
-                </ComboBox>
-                <HyperlinkButton x:Name="EndUserMeLink" Foreground="#625e55" Content="Me" Grid.Row="0" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="EndUserMeLink_Click"/>
+                    <Button x:Name="SaveButton" Width="300" Height="40" Style="{StaticResource SubmitButtonStyle}" Content="Create Ticket" HorizontalAlignment="Stretch" Grid.Column="3" VerticalAlignment="Stretch" Grid.Row="8" Foreground="White" Tapped="SaveButton_Tapped" PointerEntered="SaveButton_PointerEntered" PointerExited="SaveButton_PointerExited" FontWeight="Normal" />
 
-                <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="1" TextWrapping="Wrap" Text="Account" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
-                <ComboBox x:Name="AccountList" Grid.Column="1" Grid.Row="1" FontSize="24" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,15,0,15" VerticalAlignment="Top" BorderBrush="#FFCDCDCD">
-                </ComboBox>
+                    <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="0" TextWrapping="Wrap" Text="End User" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
+                    <ComboBox x:Name="EndUserList" Grid.Column="1" Grid.Row="0" FontSize="24" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,0,0,0" VerticalAlignment="Top" SelectionChanged="EndUserList_SelectionChanged" BorderBrush="#FFCDCDCD">
+                    </ComboBox>
+                    <HyperlinkButton x:Name="EndUserMeLink" Foreground="#625e55" Content="Me" Grid.Row="0" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="EndUserMeLink_Click"/>
 
-                <TextBlock Grid.Column="0" Foreground="#625e55" HorizontalAlignment="right" Grid.Row="2" TextWrapping="Wrap" Text="Class*" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
-                <ComboBox Name="ClassList" Grid.Column="1" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,0,0,0" VerticalAlignment="Top" BorderBrush="#FFCDCDCD">
-                </ComboBox>
+                    <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="1" TextWrapping="Wrap" Text="Account" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
+                    <ComboBox x:Name="AccountList" Grid.Column="1" Grid.Row="1" FontSize="24" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,15,0,15" VerticalAlignment="Top" BorderBrush="#FFCDCDCD">
+                    </ComboBox>
 
-                <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="3" TextWrapping="Wrap" Text="Technician" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
-                <ComboBox x:Name="TechnicianList" Grid.Column="1" Grid.Row="3" FontSize="24" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,15,0,15" VerticalAlignment="Top" BorderBrush="#FFCDCDCD">
-                </ComboBox>
-                <HyperlinkButton x:Name="TechnicianMeLink" Foreground="#625e55" Content="Me" Grid.Row="3" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="TechnicianMeLink_Click"/>
+                    <TextBlock Grid.Column="0" Foreground="#625e55" HorizontalAlignment="right" Grid.Row="2" TextWrapping="Wrap" Text="Class*" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
+                    <ComboBox Name="ClassList" Grid.Column="1" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,0,0,0" VerticalAlignment="Top" BorderBrush="#FFCDCDCD">
+                    </ComboBox>
 
-                <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="4" TextWrapping="Wrap" Text="Alternate Tech" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
-                <ComboBox x:Name="AlternateTechnicianList" Grid.Column="1" Grid.Row="4" FontSize="24" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,0,0,0" VerticalAlignment="Top" SelectionChanged="AlternateTechnicianList_SelectionChanged" BorderBrush="#FFCDCDCD">
-                </ComboBox>
-                <HyperlinkButton x:Name="AlternateTechMeLink" Foreground="#625e55" Content="Me" Grid.Row="4" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,80,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="AlternateTechMeLink_Click"/>
+                    <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="3" TextWrapping="Wrap" Text="Technician" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
+                    <ComboBox x:Name="TechnicianList" Grid.Column="1" Grid.Row="3" FontSize="24" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,15,0,15" VerticalAlignment="Top" BorderBrush="#FFCDCDCD">
+                    </ComboBox>
+                    <HyperlinkButton x:Name="TechnicianMeLink" Foreground="#625e55" Content="Me" Grid.Row="3" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="TechnicianMeLink_Click"/>
 
-                <ScrollViewer HorizontalAlignment="Left" Grid.Column="1" Grid.ColumnSpan="3" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="5" Grid.RowSpan="2" Height="100" VerticalAlignment="Top" Width="auto">
-                    <ListView x:Name="SelectedAlternateTechnicianList" Grid.Column="3" Margin="0,0,0,0" Grid.Row="5" Grid.RowSpan="3" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="450" SelectionMode="None">
-                    </ListView>
-                </ScrollViewer>
+                    <TextBlock HorizontalAlignment="right" Foreground="#625e55" Grid.Column="0" Grid.Row="4" TextWrapping="Wrap" Text="Alternate Tech" Margin="10,4,10,0" VerticalAlignment="Center" FontSize="20"/>
+                    <ComboBox x:Name="AlternateTechnicianList" Grid.Column="1" Grid.Row="4" FontSize="24" HorizontalAlignment="Left" Width="450" Height="40" Margin="0,0,0,0" VerticalAlignment="Top" SelectionChanged="AlternateTechnicianList_SelectionChanged" BorderBrush="#FFCDCDCD">
+                    </ComboBox>
+                    <HyperlinkButton x:Name="AlternateTechMeLink" Foreground="#625e55" Content="Me" Grid.Row="4" Grid.Column="2" Padding="0" HorizontalAlignment="Left" Margin="5,0,80,0" VerticalAlignment="Center" FontSize="20" FontWeight="Normal" Click="AlternateTechMeLink_Click"/>
 
-                <Button x:Name="filepickButton" Foreground="#625e55" Content="File Upload" Height="40" Grid.Column="3" HorizontalAlignment="Stretch" Padding="0,0,10,0" Margin="0,20" Grid.Row="6" VerticalAlignment="Top" FontSize="18" Click="filepickButton_Click" Background="{x:Null}" FontWeight="Normal" BorderBrush="#FF777777" BorderThickness="2" HorizontalContentAlignment="Right" />
+                    <ScrollViewer HorizontalAlignment="Left" Grid.Column="1" Grid.ColumnSpan="3" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="5" Grid.RowSpan="2" Height="100" VerticalAlignment="Top" Width="auto">
+                        <ListView x:Name="SelectedAlternateTechnicianList" Grid.Column="3" Margin="0,0,0,0" Grid.Row="5" Grid.RowSpan="3" VerticalAlignment="Top" FontSize="18" HorizontalAlignment="Left" Width="450" SelectionMode="None">
+                        </ListView>
+                    </ScrollViewer>
+
+                    <Button x:Name="filepickButton" Foreground="#625e55" Content="File Upload" Height="40" Grid.Column="3" HorizontalAlignment="Stretch" Padding="0,0,10,0" Margin="0,20" Grid.Row="6" VerticalAlignment="Top" FontSize="18" Click="filepickButton_Click" Background="{x:Null}" FontWeight="Normal" BorderBrush="#FF777777" BorderThickness="2" HorizontalContentAlignment="Right" />
+                </Grid>
             </Grid>
+        </Grid>
+        <Grid x:Name="NewUserGrid" Width="600" Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <TextBlock Foreground="#86abb6" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,20,50,30" FontSize="40" Text="New User" FontWeight="Normal"/>
+            <Button x:Name="CreateUserButton" Width="280" Height="40" Style="{StaticResource SubmitButtonStyle}" Content="Submit" HorizontalAlignment="Center" Grid.Column="3" Grid.Row="2" Foreground="White" FontWeight="Normal" PointerEntered="CreateUserButton_PointerEntered" PointerExited="CreateUserButton_PointerExited" Tapped="CreateUserButton_Tapped" />
         </Grid>
     </Grid>
 </common:LayoutAwarePage>
