--- a/SherpaDesk/MainPage.xaml
+++ b/SherpaDesk/MainPage.xaml
@@ -14,7 +14,7 @@
 						  HorizontalScrollMode="Enabled"
 						  HorizontalScrollBarVisibility="Auto"
 						  BringIntoViewOnFocusChange="False">
-        <Grid Name="LayoutRoot" Background="#ebebeb">
+        <Grid Name="LayoutRoot" Background="#EBEBEB">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
